<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".News_Screen_1">

        <!-- Your existing content remains the same -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/top"
            android:textColor="#1D3557"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stories"
            android:textColor="#E63946"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/info"
                android:scaleType="centerCrop"
                android:src="@drawable/info" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/usericon"
                android:scaleType="centerCrop"
                android:src="@drawable/usersicon" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="360dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:drawableEnd="@drawable/search_sharp_svgrepo_com"
            android:drawablePadding="8dp"
            android:hint="@string/search_here"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="344dp"
            android:layout_height="310dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/image1"
                android:scaleType="centerCrop"
                android:src="@drawable/image1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="200dp"
                android:textStyle="bold"
                android:text="@string/inter_faculty_cricket_match"
                android:textSize="16sp" />
            <Button
                android:id="@+id/readmore1"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginTop="250dp"
                android:layout_marginStart="200dp"
                android:text="@string/read_more"/>




        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="344dp"
            android:layout_height="310dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/image2"
                android:scaleType="centerCrop"
                android:src="@drawable/image2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="200dp"
                android:textStyle="bold"
                android:text="@string/inter_faculty_volleyball_match"
                android:textSize="16sp" />
            <Button
                android:id="@+id/readmore2"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginTop="250dp"
                android:layout_marginStart="200dp"
                android:text="@string/read_more2"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="344dp"
            android:layout_height="310dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView6">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/image3"
                android:scaleType="centerCrop"
                android:src="@drawable/image3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="200dp"
                android:text="@string/inter_faculty_football_match"
                android:textStyle="bold"
                android:textSize="16sp" />
            <Button
                android:id="@+id/readmore3"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginTop="250dp"
                android:layout_marginStart="200dp"
                android:text="@string/read_more3"/>



        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>